--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,14 @@
     <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
-    <!-- Bootswatch -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/flatly/bootstrap.min.css">
+    <!--bootswatch theme-->
+    <link rel="stylesheet" href="https://bootswatch.com/readable/bootstrap.min.css">
 
     <!-- Font-Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+
+    <!-- my css -->
+    <link rel="stylesheet" type="text/css" href="style.css">
 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery.js"></script>
